Fix test suite: Update MockMvc authentication contexts and correct DTO fields